Added UpdateOpening documentation
